fix(anonymous-overflow): misc

--- a/styles/anonymous-overflow/catppuccin.user.less
+++ b/styles/anonymous-overflow/catppuccin.user.less
@@ -72,13 +72,41 @@
     --text-color: @text !important;
     --muted-text-color: @subtext0 !important;
     --link-color: @blue !important;
-    --meta-bg: @overlay0 !important;
-    --input-bg-hover: @overlay0 !important;
+    --meta-bg: @surface1 !important;
+    --input-bg: @mantle !important;
+    --input-bg-hover: @surface1 !important;
     --divider-color: @overlay0 !important;
 
+    .view-input:focus {
+      border-color: @surface2;
+    }
+
+    .answer-link .icon img {
+      background: none;
+      filter: @text-filter;
+    }
     .answer-meta.accepted {
       background-color: @green !important;
       color: @base !important;
+
+      .answer-link .icon img {
+        filter: @crust-filter;
+      }
+    }
+
+    .sorting img[src="/static/icons/sort.svg"] {
+      filter: @subtext0-filter;
+    }
+
+    hr {
+      border-color: @overlay0;
+    }
+
+    .error {
+      background-color: @red;
+    }
+    .error, .success {
+      color: @crust;
     }
   }
 }
