feat: style text around user calendar

--- a/styles/codeforces/catppuccin.user.less
+++ b/styles/codeforces/catppuccin.user.less
@@ -293,6 +293,13 @@
       rect[data-items=""] {
         fill: @surface1;
       }
+      svg text {
+        fill: @subtext0 !important;
+      }
+    }
+    ._UserActivityFrame_frame .userActivityRoundBox ._UserActivityFrame_header,
+    ._UserActivityFrame_frame .userActivityRoundBox ._UserActivityFrame_footer ._UserActivityFrame_counterDescription {
+      color: @subtext0;
     }
 
     .datatable {
