chore(anonymous-overflow): update instances

--- a/styles/anonymous-overflow/catppuccin.user.less
+++ b/styles/anonymous-overflow/catppuccin.user.less
@@ -17,41 +17,23 @@
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
-@-moz-document domain("code.whatever.social"),
-  domain("ao.vern.cc"),
-  domain("overflow.smnz.de"),
-  domain("overflow.lunar.icu"),
+/* Working instances filtered from instance list: https://aohub.httpjames.space/. */
+@-moz-document domain("ao.vern.cc"),
   domain("overflow.adminforge.de"),
+  domain("overflow.floppa.cloud"),
   domain("overflow.hostux.net"),
-  domain("overflow.projectsegfau.lt"),
-  domain("code.xbdm.fun"),
-  domain("overflow.fascinated.cc"),
   domain("ao.bloat.cat"),
-  domain("anonoverflow.frontendfriendly.xyz"),
   domain("ao.owo.si"),
-  domain("overflow.datura.network"),
-  domain("overflow.freedit.eu"),
-  domain("ao.rootdo.com"),
-  domain("anonoverflow.hyperreal.coffee"),
-  domain("o.sudovanilla.org"),
-  domain("anonymousoverflow.privacyfucking.rocks"),
-  domain("exchange.seitan-ayoub.lol"),
   domain("overflow.r4fo.com"),
   domain("overflow.ducks.party"),
-  domain("ao.ngn.tf"),
-  domain("overflow.snine.nl"),
   domain("anonymousoverflow.privacyredirect.com"),
   domain("soflow.nerdvpn.de"),
   domain("overflow.einfachzocken.eu"),
-  domain("overflow.seasi.dev"),
   domain("anonymousoverflow.catsarch.com"),
   domain("overflow.darkness.services"),
   domain("anonflow.aketawi.space"),
-  domain("anonymousoverflow.gitro.xyz"),
-  domain("ao.bunk.lol"),
   domain("o.iii.st"),
-  domain("overflow.canine.tools"),
-  domain("overflow.hostux.net") {
+  domain("overflow.canine.tools") {
   @import url("https://python.catppuccin.com/pygments/catppuccin-variables.important.css");
 
   :root {
