fix: remove unneeded image styling and use built-in filters

--- a/styles/codeforces/catppuccin.user.less
+++ b/styles/codeforces/catppuccin.user.less
@@ -428,15 +428,11 @@
       }
 
       img[src*="tablesorter-"] {
-        filter: invert(1);
-      }
-
-      img[src*="icons/user"] {
-        filter: brightness(1.6) contrast(0.8);
+        filter: @text-filter;
       }
 
       img.tex-formula {
-        filter: invert(1);
+        filter: @text-filter;
       }
     }
     
