fix: style code and quote blocks

--- a/styles/codeforces/catppuccin.user.less
+++ b/styles/codeforces/catppuccin.user.less
@@ -43,7 +43,7 @@
     }
 
     .ttypography {
-      &, h1, h2, h3, h4, h5, h6, table {
+      &, h1, h2, h3, h4, h5, h6, table, pre, code, blockquote {
         color: @text;
       }
       .MathJax {
