fix: consistent link styling

--- a/styles/codeforces/catppuccin.user.less
+++ b/styles/codeforces/catppuccin.user.less
@@ -86,7 +86,7 @@
     a:link,
     [class*="menu-list"] li a {
       color: @blue;
-      &:hover {
+      &:hover, &:active, &:focus {
         background: none;
         color: @blue;
       }
