feat(gimkit): givekit
also fix some issues with the login/signup pages

--- a/styles/gimkit/catppuccin.user.less
+++ b/styles/gimkit/catppuccin.user.less
@@ -930,12 +930,31 @@
     }
 
     // Login/Signup
-    div:has(> .scroll-y img[src="/client/img/signup/google.svg"]) {
+    div:has(
+      > .scroll-y img[src="/client/img/signup/google.svg"], > .scroll-y
+        > .ant-input-password
+    ) {
       background-image: none;
 
       > .scroll-y {
         background-color: @base;
+
+        div[style*="color: rgb(0, 0, 0);"] {
+          color: @text !important;
+        }
+
+        .ant-btn span {
+          background-color: transparent !important;
+        }
       }
+    }
+
+    // GiveKit
+    #content
+      > div:has(> img[src="/client/img/givekit/header.png"])
+      > :last-child {
+      background-color: @base;
+      box-shadow: @crust 0 10px 30px;
     }
 
     .ant-alert-error {
