chore(gimkit): update generated style

--- a/styles/gimkit/catppuccin.user.less
+++ b/styles/gimkit/catppuccin.user.less
@@ -126,7 +126,8 @@
     .ant-space-item .eZOfwh,
     .ant-space-item .cYojXN,
     .ant-space-item .gYojnk,
-    .ant-space-item .cWGQyr {
+    .ant-space-item .cWGQyr,
+    .ant-space-item .dPbUaE {
       background-color: @accent !important;
 
       &, * {
