Add background color for the chat input

--- a/styles/google-gemini/catppuccin.user.less
+++ b/styles/google-gemini/catppuccin.user.less
@@ -354,5 +354,10 @@
     input-container::before {
       background: unset;
     }
+      
+    /* Gemini chat input */
+    .discovery-feed-theme {
+        background-color: @surface0;
+    }
   }
 }
