--- a/styles/dev.to/catppuccin.user.less
+++ b/styles/dev.to/catppuccin.user.less
@@ -18,6 +18,8 @@
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
 @-moz-document domain("dev.to"), domain('forem.com') {
+  @import url("https://python.catppuccin.com/pygments/catppuccin-variables.important.css");
+
   body.dark-theme {
     #catppuccin(@darkFlavor);
   }
