style(dev.to): consistent quotes

--- a/styles/dev.to/catppuccin.user.less
+++ b/styles/dev.to/catppuccin.user.less
@@ -17,7 +17,7 @@
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
-@-moz-document domain("dev.to"), domain('forem.com') {
+@-moz-document domain("dev.to"), domain("forem.com") {
   @import url("https://python.catppuccin.com/pygments/catppuccin-variables.important.css");
 
   body.dark-theme {
