feat(dev.to): subforem support (#1821)

--- a/styles/dev.to/catppuccin.user.less
+++ b/styles/dev.to/catppuccin.user.less
@@ -17,7 +17,7 @@
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
-@-moz-document domain("dev.to") {
+@-moz-document domain("dev.to"), domain("forem.com") {
   @import url("https://python.catppuccin.com/pygments/catppuccin-variables.important.css");
 
   body.dark-theme {
@@ -35,6 +35,8 @@
     --body-bg: @mantle;
     --black: if(@flavor = latte, @text, @crust);
     --body-color: @text;
+    --color-primary: @subtext1;
+    --color-secondary: @subtext0;
 
     --header-bg: @base;
     --header-shadow: @crust;
