feat(lastfm): home, profile & subpages

--- a/styles/lastfm/catppuccin.user.less
+++ b/styles/lastfm/catppuccin.user.less
@@ -52,6 +52,11 @@
     .btn-secondary {
       background-color: @surface0;
       color: @text;
+
+      &:hover {
+        background-color: @surface1 !important;
+        color: @text !important;
+      }
     }
     .btn-cancel {
       color: @subtext1;
@@ -119,6 +124,16 @@
 
       legend {
         color: @subtext1;
+      }
+    }
+
+    .search-form {
+      .search-submit::before {
+        filter: @overlay0-filter;
+      }
+
+      &::after {
+        border-right-color: @surface1;
       }
     }
 
@@ -208,10 +223,10 @@
         background: @accent;
       }
       .auth-dropdown-menu {
-        background-color: @base;
+        background: @mantle !important;
 
         .auth-dropdown-profile {
-          background-color: @mantle;
+          background-color: @crust;
 
           .auth-dropdown-profile-info {
             .username {
@@ -223,17 +238,17 @@
           }
         }
         .auth-dropdown-menu-links {
-          background: @base;
+          background: @mantle;
 
           .auth-dropdown-menu-item .auth-dropdown-menu-link img {
             filter: @text-filter;
           }
         }
         .auth-dropdown-menu-footer {
-          background: @base;
+          background: @mantle;
 
           .auth-upgrade-cta {
-            background: @base;
+            background: @mantle;
             box-shadow: inset 0 0 0 1px @overlay0;
             color: @yellow;
 
@@ -244,7 +259,7 @@
           }
           .auth-logout-cta {
             box-shadow: inset 0 0 0 1px @overlay0;
-            background: @base;
+            background: @mantle;
             color: @text;
           }
         }
@@ -252,7 +267,7 @@
     }
 
     .header {
-      &.header--overview {
+      &.header--overview, &.header--sub-page {
         color: @text;
       }
       &.header--overview .container, &.header--sub-page .container {
@@ -262,6 +277,12 @@
       background: @base;
 
       .header-info {
+        .header-featured-track {
+          .featured-item-heading {
+            color: @subtext1;
+          }
+        }
+
         .header-title-secondary {
           .header-scrobble-since, .header-title-display-name {
             color: @subtext1;
@@ -481,6 +502,251 @@
         background-color: darken(@accent, 5%) !important;
         color: @crust !important;
       }
+    }
+
+    /* Home */
+    .secondary-nav-item-link {
+      &--active::after {
+        .homefeed--artists .content-top & {
+          background-color: @yellow;
+        }
+        .homefeed--albums .content-top & {
+          background-color: @green;
+        }
+        .homefeed--tracks .content-top & {
+          background-color: @blue;
+        }
+        .homefeed--events .content-top & {
+          background-color: @mauve;
+        }
+      }
+      &:hover::after {
+        .homefeed .content-top .secondary-nav-item--artists & {
+          background-color: @yellow;
+        }
+        .homefeed .content-top .secondary-nav-item--albums & {
+          background-color: @green;
+        }
+        .homefeed .content-top .secondary-nav-item--tracks & {
+          background-color: @blue;
+        }
+        .homefeed .content-top .secondary-nav-item--events & {
+          background-color: @mauve;
+        }
+      }
+    }
+    .recs-feed {
+      .recs-feed-item {
+        .recs-feed-cover-image-wrap {
+          color: @text;
+        }
+
+        .recs-feed-playlink::before {
+          background-color: @text;
+        }
+
+        &.recs-feed-item--artist .context::after {
+          background-color: @yellow;
+        }
+        &.recs-feed-item--track .context::after {
+          background-color: @blue;
+        }
+        &.recs-feed-item--album .context::after {
+          background-color: @green;
+        }
+        .context {
+          color: @subtext1;
+          background-color: @surface0;
+          box-shadow: inset 1px 0 @surface1, inset -1px -1px @surface1;
+        }
+      }
+    }
+
+    .stationlinks {
+      .stationlink-list .stationlink::before {
+        background-color: @text;
+      }
+    }
+    .mpu-subscription-upsell {
+      color: @subtext0;
+    }
+    .subscribe-cta {
+      background-color: fade(@yellow, 10%);
+    }
+
+    .subscribe-cta a, .btn-subscribe {
+      background-color: @yellow;
+      color: @crust;
+
+      &:hover {
+        background-color: darken(@yellow, 5%) !important;
+        color: @crust !important;
+      }
+    }
+
+    /* Profile */
+    .profile-cards-items {
+      .profile-card .profile-card-content {
+        background: linear-gradient(
+          90deg,
+          @surface0 185px 80%,
+          fade(@surface0, 75%) 95%,
+          transparent
+        );
+
+        .profile-card-content-title {
+          color: @text;
+        }
+        p {
+          color: @subtext1;
+        }
+      }
+    }
+
+    /* Reports */
+    .listening-report-promo {
+      background-color: @surface0 !important;
+      border-color: @surface1 !important;
+
+      .listening-report-promo-date::after {
+        filter: @overlay2-filter;
+      }
+
+      .listening-report-promo-title {
+        color: @subtext0;
+      }
+    }
+
+    /* Library */
+    .library-controls {
+      .secondary-nav-item .secondary-nav-item-link {
+        &::before {
+          filter: @text-filter;
+        }
+        &--active, &:hover {
+          color: @accent;
+
+          &::before {
+            filter: @accent-filter;
+          }
+        }
+      }
+    }
+    .library-controls-datepicker {
+      .date-range-picker-button {
+        color: @accent;
+
+        &::before, .date-range-picker-button-inner::before {
+          filter: @accent-filter;
+        }
+      }
+    }
+    .date-range-picker-content {
+      background-color: @mantle;
+
+      &::before {
+        filter: @mantle-filter;
+      }
+
+      .date-range-picker-presets a {
+        color: @text;
+
+        &:hover {
+          background-color: @surface0 !important;
+        }
+      }
+
+      .date-range-picker-form {
+        border-top-color: @surface1;
+
+        .control-label {
+          color: @subtext1;
+        }
+      }
+    }
+    #scrobble-chart-content {
+      .highcharts-background {
+        fill: @base !important;
+      }
+      .highcharts-axis-title {
+        fill: @subtext1 !important;
+      }
+      .highcharts-axis-labels text {
+        fill: @subtext0 !important;
+      }
+
+      .highcharts-yaxis-grid .highcharts-grid-line {
+        stroke: @overlay0 !important;
+      }
+      .highcharts-xaxis .highcharts-axis-line {
+        stroke: @overlay1 !important;
+      }
+
+      .highcharts-series-group {
+        .highcharts-point {
+          fill: fade(@accent, 30%);
+        }
+      }
+
+      .highcharts-tooltip {
+        .highcharts-tooltip-box:not(.highcharts-shadow) {
+          fill: @mantle !important;
+          stroke: @surface0 !important;
+        }
+
+        text {
+          fill: @text !important;
+        }
+      }
+    }
+    .metadata-title {
+      color: @subtext1;
+    }
+    .date-heading {
+      color: @subtext0;
+    }
+
+    // Pagination
+    .pagination {
+      .pagination-page {
+        &[aria-current] {
+          color: @accent;
+          box-shadow: inset 0 -2px @accent;
+        }
+        &:not(.pagination-page--ellipsis):hover {
+          box-shadow: inset 0 -2px @accent;
+        }
+      }
+    }
+
+    /* Followers */
+    .text-light {
+      color: @subtext1;
+    }
+    .user-list-follower-btn {
+      [data-toggle-button-current-state="followed"] & {
+        background-color: @green;
+
+        &:hover {
+          background-color: @red !important;
+        }
+      }
+      [data-toggle-button-current-state="unfollowed"] & {
+        background-color: @accent;
+
+        &:hover {
+          background-color: darken(@accent, 5%) !important;
+        }
+      }
+
+      &::before {
+        filter: @crust-filter;
+      }
+    }
+
+    /* Obsessions */
+    .obsession-candidates-row::before {
+      border-top-color: @surface1;
     }
   }
 }
