fix(lastfm): misc, todo

--- a/styles/lastfm/catppuccin.user.less
+++ b/styles/lastfm/catppuccin.user.less
@@ -108,7 +108,7 @@
       }
 
       .lfm-form-radio input[type="radio"] {
-        & + label::before {
+        + label::before {
           background-color: @base;
           border-color: @overlay1;
         }
@@ -160,6 +160,14 @@
 
     .container {
       background: @base;
+    }
+
+    .content-top-back-link {
+      color: @subtext0;
+
+      a::before {
+        filter: @overlay2-filter;
+      }
     }
 
     /* Footer */
@@ -748,5 +756,7 @@
     .obsession-candidates-row::before {
       border-top-color: @surface1;
     }
+
+    // TODO: https://www.last.fm/music
   }
 }
