feat(button-text): change color
Co-authored-by: uncenter <uncenter@uncenter.dev>

--- a/styles/docker/catppuccin.user.less
+++ b/styles/docker/catppuccin.user.less
@@ -72,7 +72,7 @@
     --box-border-color: @overlay0;
 
     --social-button-border-color: @text;
-    --secondary-button-text-color: @overlay0;
+    --secondary-button-text-color: @subtext0;
 
     --presentational-content-color: @text;
     --brand-primary-color: #3f59e4;
