chore(youtube): clarify comment

--- a/styles/youtube/catppuccin.user.less
+++ b/styles/youtube/catppuccin.user.less
@@ -354,7 +354,7 @@
     /* Misc */
     
     & when (@hideColorSampleTint = 1) {
-      // Thumbnail/video preview hover effect
+      // Recommended video card hover effect
       .yt-spec-touch-feedback-shape__hover-effect {
         background-color: @surface0 !important;
       }
