fix(lib/mediawiki): change button quiet hover colours to fade accent

--- a/lib/mediawiki.less
+++ b/lib/mediawiki.less
@@ -160,8 +160,8 @@
     --background-color-backdrop-light: fade(@base, 65%);
     --background-color-backdrop-dark: fade(@text, 65%);
 
-    --background-color-button-quiet--hover: fade(@text, 2.7%);
-    --background-color-button-quiet--active: fade(@text, 8.2%);
+    --background-color-button-quiet--hover: fade(@accent, 2.7%);
+    --background-color-button-quiet--active: fade(@accent, 8.2%);
 
     --background-color-input-binary--checked: @accent;
 
