feat(lastfm): shoutbox
fixes styling in the comments sections on artists, albums, tracks, etc

--- a/styles/lastfm/catppuccin.user.less
+++ b/styles/lastfm/catppuccin.user.less
@@ -456,10 +456,6 @@
       border-bottom-color: @surface1;
     }
 
-    .shout-form {
-      border-bottom-color: @surface0;
-    }
-
     .video-preview-upload-cta {
       background: @surface0;
       box-shadow: 0 0 0 2px @surface1;
@@ -470,6 +466,62 @@
 
       &::before {
         filter: @text-filter;
+      }
+    }
+
+    /* Shoutbox */
+    .shout,
+    .shout-form {
+      border-bottom-color: @surface0;
+    }
+
+    .shout-user,
+    .shout-user a {
+      color: @text;
+    }
+    .shout-timestamp {
+      color: @subtext0;
+    }
+
+    a.shout-permalink {
+      &:focus,
+      &:hover {
+        color: @text !important;
+      }
+    }
+
+    .shout-action,
+    .shout-reply,
+    .vote-button {
+      color: @subtext1;
+
+      &:focus,
+      &:hover {
+        color: @text !important;
+      }
+
+      &::before {
+        filter: @text-filter;
+      }
+    }
+
+    .shout-action,
+    .shout-reply {
+      &:focus::before,
+      &:hover::before {
+        filter: @accent-filter !important;
+      }
+    }
+    .vote-button--voted::before,
+    .vote-button--unvoted:focus::before,
+    .vote-button--unvoted:hover::before {
+      filter: @green-filter !important;
+    }
+
+    .shout-more-actions {
+      &:focus::before,
+      &:hover::before {
+        filter: @text-filter !important;
       }
     }
 
