fix(lastfm): misc

--- a/styles/lastfm/catppuccin.user.less
+++ b/styles/lastfm/catppuccin.user.less
@@ -470,58 +470,67 @@
     }
 
     /* Shoutbox */
-    .shout,
-    .shout-form {
-      border-bottom-color: @surface0;
-    }
-
-    .shout-user,
-    .shout-user a {
-      color: @text;
-    }
-    .shout-timestamp {
-      color: @subtext0;
-    }
-
-    a.shout-permalink {
-      &:focus,
-      &:hover {
-        color: @text !important;
-      }
-    }
-
-    .shout-action,
-    .shout-reply,
-    .vote-button {
-      color: @subtext1;
-
-      &:focus,
-      &:hover {
-        color: @text !important;
+    #shoutbox {
+      .shout,
+      .shout-form {
+        border-bottom-color: @surface0;
       }
 
-      &::before {
-        filter: @text-filter;
-      }
-    }
+      .shout-list {
+        .shout-user a {
+          color: @text;
+        }
+        .shout-timestamp {
+          color: @subtext0;
 
-    .shout-action,
-    .shout-reply {
-      &:focus::before,
-      &:hover::before {
-        filter: @accent-filter !important;
-      }
-    }
-    .vote-button--voted::before,
-    .vote-button--unvoted:focus::before,
-    .vote-button--unvoted:hover::before {
-      filter: @green-filter !important;
-    }
+          &:focus,
+          &:hover {
+            color: @text !important;
+          }
+        }
 
-    .shout-more-actions {
-      &:focus::before,
-      &:hover::before {
-        filter: @text-filter !important;
+        .shout-action,
+        .shout-reply,
+        .vote-button {
+          color: @subtext1;
+
+          &::before {
+            filter: @subtext1-filter;
+          }
+
+          &:focus,
+          &:hover {
+            color: @text !important;
+
+            &::before {
+              filter: @text-filter;
+            }
+          }
+        }
+
+        .vote-button--voted::before,
+        .vote-button--unvoted:focus::before,
+        .vote-button--unvoted:hover::before {
+          filter: @green-filter !important;
+        }
+
+        .shout-action-more {
+          .shout-more-actions {
+            &::before {
+              filter: @subtext1-filter;
+            }
+
+            &:focus::before,
+            &:hover::before {
+              filter: @text-filter !important;
+            }
+          }
+          .shout-more-actions-menu  {
+            .more-item--report::before {
+              filter: @subtext0-filter;
+            }
+          }
+        }
       }
     }
 
