--- a/styles/bilibili/catppuccin.user.less
+++ b/styles/bilibili/catppuccin.user.less
@@ -16,7 +16,7 @@
 ==/UserStyle== */
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
-@-moz-document domain("bilibili.com") , domain("www.bilibili.com") {
+@-moz-document domain("bilibili.com") {
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
